--- a/android/.classpath
+++ b/android/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="libs/cordova-2.2.0.jar"/>
+	<classpathentry kind="lib" path="libs/AndroidBluetoothLibrary.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
